# open62541-sport

./: raspi_motorcontroller_setup_instructions.txt  raspi_ssh_setup
examples/: CMakeLists.txt  MCLib.csv  func.h  motorcontroller_inital_setup.c  nanotec_smci_etc.h  server_robolink.c  server_robolink_config.h  server_setup_motoraddr.c  server_sport.c  sport.h
